test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST__api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 02 Apr 2025 10:43:46 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="8R1xMDPncDrVQGAEbNY9E8H76wOF03IW", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 3

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}